Conditionalize xrefs for different builds - p6

--- a/versions/v2.10/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/set-up-existing-storage.adoc
+++ b/versions/v2.10/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/set-up-existing-storage.adoc
@@ -7,9 +7,11 @@
 :experimental:
 ifeval::["{build-type}" != "community"]
 :xref-cluster-project-roles: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
+:xref-longhorn: xref:integrations/longhorn/longhorn.adoc
 endif::[]
 ifeval::["{build-type}" == "community"]
 :xref-cluster-project-roles: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
+:xref-longhorn: xref:integrations-in-rancher/longhorn/longhorn.adoc
 endif::[]
 
 This section describes how to set up existing persistent storage for workloads in Rancher.
@@ -38,7 +40,7 @@ Creating a persistent volume in Rancher will not create a storage volume. It onl
 
 The steps to set up a persistent storage device will differ based on your infrastructure. We provide examples of how to set up storage using xref:cluster-admin/manage-clusters/persistent-storage/examples/vsphere-storage.adoc[vSphere,] xref:cluster-admin/manage-clusters/persistent-storage/examples/nfs-storage.adoc[NFS,] or Amazon's xref:cluster-admin/manage-clusters/persistent-storage/examples/persistent-storage-in-amazon-ebs.adoc[EBS.]
 
-If you have a pool of block storage, and you don't want to use a cloud provider, Longhorn could help you provide persistent storage to your Kubernetes cluster. For more information, see xref:integrations/longhorn/longhorn.adoc[Cloud Native Storage with Longhorn].
+If you have a pool of block storage, and you don't want to use a cloud provider, Longhorn could help you provide persistent storage to your Kubernetes cluster. For more information, see {xref-longhorn}[Cloud Native Storage with Longhorn].
 
 == 2. Add a PersistentVolume that refers to the persistent storage
 
