--- a/versions/v2.10/modules/en/pages/installation-and-upgrade/references/feature-flags.adoc
+++ b/versions/v2.10/modules/en/pages/installation-and-upgrade/references/feature-flags.adoc
@@ -7,10 +7,12 @@
 ifeval::["{build-type}" != "community"]
 :xref-experimental-features: xref:rancher-admin/experimental-features/experimental-features.adoc
 :xref-cluster-project-roles: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
+:xref-harvester-overview: xref:integrations/harvester/overview.adoc
 endif::[]
 ifeval::["{build-type}" == "community"]
 :xref-experimental-features: xref:how-to-guides/advanced-user-guides/enable-experimental-features/enable-experimental-features.adoc
 :xref-cluster-project-roles: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
+:xref-harvester-overview: xref:integrations-in-rancher/harvester/overview.adoc
 endif::[]
 
 With feature flags, you can try out optional or experimental features, and enable legacy features that are being phased out.
@@ -29,7 +31,7 @@ The following is a list of feature flags available in Rancher. If you've upgrade
 * `clean-stale-secrets`: Removes stale secrets from the `cattle-impersonation-system` namespace. This slowly cleans up old secrets which are no longer being used by the impersonation system.
 * `continuous-delivery`: Allows Fleet GitOps to be disabled separately from Fleet. See xref:rancher-admin/experimental-features/continuous-delivery.adoc[Continuous Delivery.] for more information.
 * `fleet`: The Rancher provisioning framework in v2.6 and later requires Fleet. The flag will be automatically enabled when you upgrade, even if you disabled this flag in an earlier version of Rancher. See xref:integrations/fleet/fleet.adoc[Continuous Delivery with Fleet] for more information.
-* `harvester`: Manages access to the Virtualization Management page, where users can navigate directly to Harvester clusters and access the Harvester UI. See xref:integrations/harvester/overview.adoc[{harvester-product-name} Integration Overview] for more information.
+* `harvester`: Manages access to the Virtualization Management page, where users can navigate directly to Harvester clusters and access the Harvester UI. See {xref-harvester-overview}[{harvester-product-name} Integration Overview] for more information.
 * `istio-virtual-service-ui`: Enables a xref:rancher-admin/experimental-features/istio-traffic-management-features.adoc[visual interface] to create, read, update, and delete Istio virtual services and destination rules, which are Istio traffic management features.
 * `legacy`: Enables a set of features from 2.5.x and earlier, that are slowly being phased out in favor of newer implementations. These are a mix of deprecated features as well as features that will eventually be available to newer versions. This flag is disabled by default on new Rancher installations. If you're upgrading from a previous version of Rancher, this flag is enabled.
 * `managed-system-upgrade-controller`: Enables the installation of the system-upgrade-controller app in downstream imported RKE2/K3s clusters, as well as in the local cluster if it is an RKE2/K3s cluster.
