--- a/versions/v2.12/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
+++ b/versions/v2.12/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
@@ -9,9 +9,11 @@ endif::[]
 :description: Read about port requirements needed in order for Rancher to operate properly, both for Rancher nodes and downstream Kubernetes cluster nodes
 ifeval::["{build-type}" != "community"]
 :xref-launch-k8s-with-rancher: xref:cluster-deployment/launch-kubernetes-with-rancher.adoc
+:xref-harvester-overview: xref:integrations/harvester/overview.adoc
 endif::[]
 ifeval::["{build-type}" == "community"]
 :xref-launch-k8s-with-rancher: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/launch-kubernetes-with-rancher.adoc
+:xref-harvester-overview: xref:integrations-in-rancher/harvester/overview.adoc
 endif::[]
 
 To operate properly, Rancher requires a number of ports to be open on Rancher nodes and on downstream Kubernetes cluster nodes.
@@ -362,7 +364,7 @@ If security isn't a large concern and you're okay with opening a few additional 
 
 === Ports for {harvester-product-name} Clusters
 
-Refer to the xref:integrations/harvester/overview.adoc#_port_requirements[{harvester-product-name} Integration Overview] for more information on Harvester port requirements.
+Refer to the {xref-harvester-overview}#_port_requirements[{harvester-product-name} Integration Overview] for more information on Harvester port requirements.
 
 === Ports for Rancher Launched Kubernetes Clusters using Node Pools
 
