--- a/versions/v2.12/modules/en/pages/integrations/cluster-api/cluster-api.adoc
+++ b/versions/v2.12/modules/en/pages/integrations/cluster-api/cluster-api.adoc
@@ -6,10 +6,16 @@ endif::[]
 :page-revdate: {revdate}
 :community-path: integrations-in-rancher/cluster-api/index.adoc 
 :product-path: integrations/cluster-api/cluster-api.adoc
+ifeval::["{build-type}" != "community"]
+:xref-turtles-overview: xref:integrations/cluster-api/overview.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-turtles-overview: xref:integrations-in-rancher/cluster-api/overview.adoc
+endif::[]
 
 https://documentation.suse.com/cloudnative/cluster-api/{turtles-docs-version}/en/index.html[{turtles-product-name}] is a https://kubernetes.io/docs/concepts/extend-kubernetes/operator/#operators-in-kubernetes[Kubernetes Operator] that manages the lifecycle of provisioned Kubernetes clusters, by providing integration between your Cluster API (CAPI) and Rancher. With Rancher Turtles, you can:
 
 * Import CAPI clusters into Rancher, by installing the Rancher Cluster Agent in CAPI provisioned clusters.
 * Configure the https://documentation.suse.com/cloudnative/cluster-api/{turtles-docs-version}/en/operator/chart.html#_cluster_api_operator_values[CAPI Operator].
 
-The xref:integrations/cluster-api/overview.adoc[Overview] section outlines installation options, Rancher Turtles architecture, and a brief demo. For more details, see the https://documentation.suse.com/cloudnative/cluster-api/{turtles-docs-version}/en/index.html[{turtles-product-name} documentation].
+The {xref-turtles-overview}[Overview] section outlines installation options, Rancher Turtles architecture, and a brief demo. For more details, see the https://documentation.suse.com/cloudnative/cluster-api/{turtles-docs-version}/en/index.html[{turtles-product-name} documentation].
