--- a/versions/v2.12/modules/en/pages/integrations/integrations.adoc
+++ b/versions/v2.12/modules/en/pages/integrations/integrations.adoc
@@ -6,6 +6,30 @@ endif::[]
 :page-revdate: {revdate}
 :community-path: integrations-in-rancher/index.adoc 
 :product-path: integrations/integrations.adoc
+ifeval::["{build-type}" != "community"]
+:xref-longhorn-overview: xref:integrations/longhorn/overview.adoc
+:xref-k8s-distros: xref:integrations/kubernetes-distributions.adoc
+:xref-harvester-overview: xref:integrations/harvester/overview.adoc
+:xref-neuvector-overview: xref:integrations/neuvector/overview.adoc
+:xref-kubewarden: xref:integrations/kubewarden.adoc
+:xref-elemental: xref:integrations/elemental.adoc
+:xref-fleet-overview: xref:integrations/fleet/overview.adoc
+:xref-suse-observability: xref:integrations/suse-observability.adoc
+:xref-rancher-desktop: xref:integrations/rancher-desktop.adoc
+:xref-turtles-overview: xref:integrations/cluster-api/overview.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-longhorn-overview: xref:integrations-in-rancher/longhorn/overview.adoc
+:xref-k8s-distros: xref:integrations-in-rancher/kubernetes-distributions/kubernetes-distributions.adoc
+:xref-harvester-overview: xref:integrations-in-rancher/harvester/overview.adoc
+:xref-neuvector-overview: xref:integrations-in-rancher/neuvector/overview.adoc
+:xref-kubewarden: xref:integrations-in-rancher/kubewarden/kubewarden.adoc
+:xref-elemental: xref:integrations-in-rancher/elemental/elemental.adoc
+:xref-fleet-overview: xref:integrations-in-rancher/fleet/overview.adoc
+:xref-suse-observability: xref:integrations-in-rancher/suse-observability/suse-observability.adoc
+:xref-rancher-desktop: xref:integrations-in-rancher/rancher-desktop.adoc
+:xref-turtles-overview: xref:integrations-in-rancher/cluster-api/overview.adoc
+endif::[]
 
 Prime is the Rancher ecosystem's enterprise offering, with additional security, extended lifecycles, and access to Prime-exclusive documentation. Rancher Prime installation assets are hosted on a trusted SUSE registry, owned and managed by Rancher. The trusted Prime registry includes only stable releases that have been community-tested.
 
@@ -16,12 +40,12 @@ To learn more and get started with Rancher Prime, please visit https://www.ranch
 To learn more about Rancher's ecosystem, refer to the following integrations:
 
 * xref:integrations/kubernetes-distributions.adoc[Kubernetes Distributions]
-* xref:integrations/harvester/overview.adoc[{harvester-product-name}]
-* xref:integrations/longhorn/overview.adoc[{longhorn-product-name}]
-* xref:integrations/neuvector/overview.adoc[{neuvector-product-name}]
-* xref:integrations/kubewarden.adoc[{kubewarden-product-name}]
-* xref:integrations/elemental.adoc[{elemental-product-name}]
-* xref:integrations/fleet/overview.adoc[{fleet-product-name}]
-* xref:integrations/suse-observability.adoc[{stackstate-product-name}]
-* xref:integrations/rancher-desktop.adoc[Kubernetes on the Desktop with Rancher Desktop]
-* xref:integrations/cluster-api/overview.adoc[{turtles-product-name}]
+* {xref-harvester-overview}[{harvester-product-name}]
+* {xref-longhorn-overview}[{longhorn-product-name}]
+* {xref-neuvector-overview}[{neuvector-product-name}]
+* {xref-kubewarden}[{kubewarden-product-name}]
+* {xref-elemental}[{elemental-product-name}]
+* {xref-fleet-overview}[{fleet-product-name}]
+* {xref-suse-observability}[{stackstate-product-name}]
+* {xref-rancher-desktop}[Kubernetes on the Desktop with Rancher Desktop]
+* {xref-turtles-overview}[{turtles-product-name}]
