--- a/versions/v2.12/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc
+++ b/versions/v2.12/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc
@@ -6,6 +6,12 @@ endif::[]
 :page-revdate: {revdate}
 :community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/about-provisioning-drivers/index.adoc 
 :product-path: rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc
+ifeval::["{build-type}" != "community"]
+:xref-harvester-overview: xref:integrations/harvester/overview.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-harvester-overview: xref:integrations-in-rancher/harvester/overview.adoc
+endif::[]
 
 Drivers in Rancher allow you to manage which providers can be used to deploy xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted Kubernetes clusters] or xref:cluster-deployment/infra-providers/infra-providers.adoc[nodes in an infrastructure provider] to allow Rancher to deploy and manage Kubernetes.
 
@@ -43,5 +49,5 @@ Rancher supports several major cloud providers, but by default, these node drive
 
 There are several other node drivers that are disabled by default, but are packaged in Rancher:
 
-* xref:integrations/harvester/overview.adoc#_harvester_node_driver/[{harvester-product-name}], available as of Rancher v2.6.1
+* {xref-harvester-overview}#_harvester_node_driver/[{harvester-product-name}], available as of Rancher v2.6.1
 * xref:cluster-deployment/infra-providers/gce/gce.adoc[Google GCE], available as of Rancher v2.12.0
