--- a/versions/v2.13/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
+++ b/versions/v2.13/modules/en/pages/installation-and-upgrade/resources/update-rancher-certificate.adoc
@@ -10,11 +10,13 @@ ifeval::["{build-type}" != "community"]
 :xref-kubeconfig-file: xref:cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc
 :xref-install-rancher: xref:installation-and-upgrade/install-rancher.adoc
 :xref-access-cluster-kubectl: xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
+:xref-fleet-overview: xref:integrations/fleet/overview.adoc
 endif::[]
 ifeval::["{build-type}" == "community"]
 :xref-kubeconfig-file: xref:how-to-guides/new-user-guides/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc
 :xref-install-rancher: xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/install-upgrade-on-a-kubernetes-cluster.adoc
 :xref-access-cluster-kubectl: xref:how-to-guides/new-user-guides/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
+:xref-fleet-overview: xref:integrations-in-rancher/fleet/overview.adoc
 endif::[]
 
 == Updating a Private CA Certificate
@@ -219,7 +221,7 @@ Repeat the below steps for each downstream cluster:
 
 === 5. Force Update {fleet-product-name} clusters to reconnect the fleet-agent to Rancher
 
-Select 'Force Update' for the clusters within the xref:integrations/fleet/overview.adoc#_accessing_fleet_in_the_rancher_ui[Continuous Delivery] view of the Rancher UI to allow the fleet-agent in downstream clusters to successfully connect to Rancher.
+Select 'Force Update' for the clusters within the {xref-fleet-overview}#_accessing_fleet_in_the_rancher_ui[Continuous Delivery] view of the Rancher UI to allow the fleet-agent in downstream clusters to successfully connect to Rancher.
 
 ==== Why is this step required?
 
@@ -313,7 +315,7 @@ As a private CA is no longer being used, the `CATTLE_CA_CHECKSUM` environment va
 
 === 5. Force Update {fleet-product-name} clusters to reconnect the fleet-agent to Rancher
 
-Select 'Force Update' for the clusters within the xref:integrations/fleet/overview.adoc#_accessing_fleet_in_the_rancher_ui[Continuous Delivery] view of the Rancher UI to allow the fleet-agent in downstream clusters to successfully connect to Rancher.
+Select 'Force Update' for the clusters within the {xref-fleet-overview}#_accessing_fleet_in_the_rancher_ui[Continuous Delivery] view of the Rancher UI to allow the fleet-agent in downstream clusters to successfully connect to Rancher.
 
 ==== Why is this step required?
 
