--- a/versions/v2.12/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc
+++ b/versions/v2.12/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc
@@ -7,6 +7,12 @@ endif::[]
 :community-path: how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/back-up-rancher.adoc 
 :product-path: rancher-admin/back-up-restore-and-disaster-recovery/back-up.adoc
 :experimental:
+ifeval::["{build-type}" != "community"]
+:xref-fleet-overview: xref:integrations/fleet/overview.adoc
+endif::[]
+ifeval::["{build-type}" == "community"]
+:xref-fleet-overview: xref:integrations-in-rancher/fleet/overview.adoc
+endif::[]
 
 In this section, you'll learn how to back up Rancher running on any Kubernetes cluster. To backup Rancher installed with Docker, refer the instructions for xref:[single node backups]
 
@@ -44,7 +50,7 @@ Backups are created as .tar.gz files. These files can be pushed to S3 or Minio, 
 [NOTE]
 ====
 
-There is a known issue in Fleet that occurs after performing a restoration using the backup-restore-operator: Secrets used for clientSecretName and helmSecretName are not included in Fleet gitrepos. Refer xref:integrations/fleet/overview.adoc#_troubleshooting[here] for a workaround.
+There is a known issue in Fleet that occurs after performing a restoration using the backup-restore-operator: Secrets used for clientSecretName and helmSecretName are not included in Fleet gitrepos. Refer {xref-fleet-overview}#_troubleshooting[here] for a workaround.
 ====
 
 
