--- a/versions/v2.13/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/dynamically-provision-new-storage.adoc
+++ b/versions/v2.13/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/dynamically-provision-new-storage.adoc
@@ -9,9 +9,11 @@ endif::[]
 :experimental:
 ifeval::["{build-type}" != "community"]
 :xref-cluster-project-roles: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
+:xref-longhorn: xref:integrations/longhorn/longhorn.adoc
 endif::[]
 ifeval::["{build-type}" == "community"]
 :xref-cluster-project-roles: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
+:xref-longhorn: xref:integrations-in-rancher/longhorn/longhorn.adoc
 endif::[]
 
 This section describes how to provision new persistent storage for workloads in Rancher.
@@ -20,7 +22,7 @@ This section assumes that you understand the Kubernetes concepts of storage clas
 
 New storage is often provisioned by a cloud provider such as Amazon EBS. However, new storage doesn't have to be in the cloud.
 
-If you have a pool of block storage, and you don't want to use a cloud provider, Longhorn could help you provide persistent storage to your Kubernetes cluster. For more information, see xref:integrations/longhorn/longhorn.adoc[Cloud Native Storage with Longhorn].
+If you have a pool of block storage, and you don't want to use a cloud provider, Longhorn could help you provide persistent storage to your Kubernetes cluster. For more information, see {xref-longhorn}[Cloud Native Storage with Longhorn].
 
 To provision new storage for your workloads, follow these steps:
 
