Conditionalize xrefs for different builds - p6

--- a/archived_docs/v2.8/modules/en/pages/integrations/integrations.adoc
+++ b/archived_docs/v2.8/modules/en/pages/integrations/integrations.adoc
@@ -11,9 +11,9 @@ To learn more and get started with Rancher Prime, please visit https://www.ranch
 
 To learn more about Rancher's ecosystem, refer to the following integrations:
 
-* xref:integrations/kubernetes-distributions.adoc[Kubernetes Distributions]
+* {xref-k8s-distros}[Kubernetes Distributions]
 * xref:integrations/harvester/overview.adoc[{harvester-product-name}]
-* xref:integrations/longhorn/overview.adoc[{longhorn-product-name}]
+* {xref-longhorn-overview}[{longhorn-product-name}]
 * xref:integrations/neuvector/overview.adoc[{neuvector-product-name}]
 * xref:integrations/kubewarden.adoc[{kubewarden-product-name}]
 * xref:integrations/elemental.adoc[{elemental-product-name}]
