Conditionalize external project urls for different builds - pt1 (#790)
* Single source URLs - clean-cluster-nodes

* Single source URLs - installation-and-upgrade/requirements/requirements

* Single source URLs - installation-and-upgrade/install-kubernetes/rke2-for-rancher

* Single source URLs - installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes

* Single source URLs - installation-and-upgrade/other-installation-methods/http-proxy/install-kubernetes

* Single source URLs - rancher-admin/back-up-restore-and-disaster-recovery/restore

* Single source URLs - rancher-admin/back-up-restore-and-disaster-recovery/migrate-to-a-new-cluster

* Single source URLs - cluster-deployment/launch-kubernetes-with-rancher

* Single source URLs - cluster-deployment/dual-stack

* Fix community url attribute for v2.9-v2.12 cluster-admin/manage-clusters/clean-cluster-nodes

* Fix community url attribute for v2.9-v2.13 rancher-admin/back-up-restore-and-disaster-recovery/restore

--- a/versions/v2.11/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/restore.adoc
+++ b/versions/v2.11/modules/en/pages/rancher-admin/back-up-restore-and-disaster-recovery/restore.adoc
@@ -5,6 +5,12 @@
 :community-path: how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/restore-rancher.adoc 
 :product-path: rancher-admin/back-up-restore-and-disaster-recovery/restore.adoc
 :experimental:
+ifeval::["{build-type}" != "community"]
+:url-continuous-delivery-gitreo-add: https://documentation.suse.com/cloudnative/continuous-delivery/{fleet-docs-version}/en/how-tos-for-users/gitrepo-add.html#_backing_up_and_restoring
+endif::[]
+ifeval::["{build-type}" == "community"]
+:url-continuous-delivery-gitreo-add: https://fleet.rancher.io/{fleet-docs-version}/how-tos-for-users/gitrepo-add
+endif::[]
 
 This page outlines how to perform a restore with Rancher.
 
@@ -24,7 +30,7 @@ While restoring Rancher on the same setup, the operator will scale down the Ranc
 [NOTE]
 .Warning for Fleet users
 ====
-You must consider how to handle Kubernetes API server availability and paused GitRepos when restoring a Rancher setup that is running Fleet workloads. See the https://documentation.suse.com/cloudnative/continuous-delivery/{fleet-docs-version}/en/how-tos-for-users/gitrepo-add.html#_backing_up_and_restoring[{fleet-product-name} documentation] for more details.
+You must consider how to handle Kubernetes API server availability and paused GitRepos when restoring a Rancher setup that is running Fleet workloads. See the {url-continuous-delivery-gitreo-add}[{fleet-product-name} documentation] for more details.
 ====
 
 [TIP]
