--- a/versions/v2.11/modules/en/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
+++ b/versions/v2.11/modules/en/pages/cluster-admin/manage-clusters/clean-cluster-nodes.adoc
@@ -5,6 +5,12 @@
 :community-path: how-to-guides/new-user-guides/manage-clusters/clean-cluster-nodes.adoc 
 :product-path: cluster-admin/manage-clusters/clean-cluster-nodes.adoc
 :description: Learn about cluster cleanup when removing nodes from your Rancher-launched Kubernetes cluster. What is removed, how to do it manually
+ifeval::["{build-type}" != "community"]
+:url-rke2-uninstall: https://documentation.suse.com/cloudnative/rke2/latest/en/install/uninstall.html
+endif::[]
+ifeval::["{build-type}" == "community"]
+:url-rke2-uninstall: https://docs.rke2.io/install/uninstall
+endif::[]
 
 This section describes how to disconnect a node from a Rancher-launched Kubernetes cluster and remove all of the Kubernetes components from the node. This process allows you to use the node for other purposes.
 
@@ -224,7 +230,7 @@ RKE2::
 --
 [NOTE]
 ====
-For instructions on cleaning nodes in RKE2 clusters that weren't deployed by Rancher, see the https://documentation.suse.com/cloudnative/rke2/latest/en/install/uninstall.html[official RKE2 documentation] on uninstalling clusters.
+For instructions on cleaning nodes in RKE2 clusters that weren't deployed by Rancher, see the {url-rke2-uninstall}[official RKE2 documentation] on uninstalling clusters.
 ====
 
 You need to remove the following components from Rancher-provisioned RKE2 nodes:
